Synchronize Git index, add new frontend files, and update firebase.json.

--- a/firebase.json
+++ b/firebase.json
@@ -13,11 +13,17 @@
     }
   ],
   "hosting": {
-    "public": "frontend",
+    "public": "Frontend",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [     
+      {                
+        "source": "**",
+        "destination": "/index.html"
+      }                
+    ]                 
   }
 }
